@@ -37,6 +37,9 @@ Data exploration
 - Edge annotations.  Edges are now annotated with the relation between
   the connected displays - i.e. the member name, array index or likewise.
 
+- You can disable titles on dependent displays, as they can be
+  inferred from edge annotations.
+
 - Several improvements in processing data output of the inferior debugger:
   * Many more data formats are recognized.
   * Trailing data is no longer ignored.
